# MorphCut

./: CMakeLists.txt  Component.hpp  Edge.hpp  Node.hpp  README.md  bnb.hpp  global_variables.hpp  main.cpp  reconstruction.hpp  specific_search.hpp  util.hpp
odas/: nlopt.hpp  simpcd.hpp  solver.hpp  types.hpp
